--- a/scss/style.scss
+++ b/scss/style.scss
@@ -172,7 +172,8 @@ section {
         // Row
         .row {
             flex-wrap: nowrap;
-            margin: 2rem 0;
+            margin: 2rem auto;
+            max-width: 70rem;
         }
 
     }
@@ -228,8 +229,8 @@ section {
 
 // Image Card
 .image-card {
-    width: 16rem;
-    height: 16rem;
+    width: 21rem;
+    height: 18rem;
     margin-right: 2rem;
     object-fit: cover;
     border-radius: 1rem;
@@ -282,6 +283,6 @@ section {
 
 // Image Round
 .image-round {
-    width: 6rem;
-    height: 6rem;
+    width: 8rem;
+    height: 8rem;
 }
