--- a/css/style/style.css
+++ b/css/style/style.css
@@ -55,8 +55,8 @@ img {
 
 nav {
   background-color: #fff;
-  height: 5rem;
-  padding: 0 5rem;
+  height: 4rem;
+  padding: 0 4rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -66,9 +66,25 @@ nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-  position: relative;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+nav.scrolled {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
+
+nav.scrolled a {
+  font-size: 0.875rem;
+}
+
+nav.scrolled .logo {
+  padding: 0.375rem;
 }
 
 nav .languages {
@@ -124,7 +140,7 @@ nav .links a:last-child {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 4rem;
+  height: 3.5rem;
 }
 
 .header {
@@ -144,13 +160,13 @@ nav .links a:last-child {
   padding: 8rem 0;
   color: #005c32;
   background: #ffe1e1;
-  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f0faf5));
-  background: linear-gradient(180deg, #fff, #f0faf5);
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#f4fbf8));
+  background: linear-gradient(180deg, #fff, #f4fbf8);
   position: relative;
 }
 
 .header .header-title {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: 600;
 }
 
@@ -159,6 +175,7 @@ nav .links a:last-child {
   font-weight: 500;
   max-width: 40rem;
   text-align: center;
+  color: #000;
 }
 
 .header .mx-phone-button {
@@ -179,6 +196,8 @@ nav .links a:last-child {
   height: 5rem;
   border-radius: 0.5rem 0 0 0.5rem;
   margin-right: 2rem;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 .header .mx-phone-button:hover {
@@ -199,8 +218,8 @@ section {
   padding: 4rem;
 }
 
-section.services {
-  padding-top: 8rem;
+section.company {
+  margin-top: 8rem;
 }
 
 section.services .row {
@@ -210,20 +229,27 @@ section.services .row {
   max-width: 70rem;
 }
 
-section.company .row {
-  margin: 4rem 0;
-}
-
 section .section-title {
   font-size: 2rem;
   font-weight: 600;
-  margin-bottom: 2rem;
   text-align: center;
 }
 
 section .section-desc {
   font-size: 1rem;
   text-align: center;
+  margin-bottom: 2rem;
+}
+
+section.testimonials {
+  padding-top: 12rem;
+}
+
+section.testimonials .row {
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  margin: 2rem auto;
+  max-width: 70rem;
 }
 
 .row {
@@ -238,10 +264,11 @@ section .section-desc {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 4rem;
 }
 
 .card {
-  background: #f0faf5;
+  background: #f4fbf8;
   font-size: 0.875rem;
   padding: 2rem;
   margin: 1rem;
@@ -275,6 +302,8 @@ section .section-desc {
      object-fit: cover;
   border-radius: 1rem;
   position: relative;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 
 .image-card:last-child {
@@ -285,7 +314,6 @@ section .section-desc {
   width: 100%;
   height: 100%;
   border-radius: 1rem;
-  margin-bottom: 1rem;
 }
 
 .image-card .image-layer {
@@ -308,6 +336,7 @@ section .section-desc {
   background-color: transparent;
   -webkit-backdrop-filter: initial;
           backdrop-filter: initial;
+  opacity: 0;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
   cursor: pointer;
@@ -317,6 +346,7 @@ section .section-desc {
   -webkit-backdrop-filter: blur(0.25rem);
           backdrop-filter: blur(0.25rem);
   background-color: rgba(0, 92, 50, 0.75);
+  opacity: 1;
 }
 
 .image-card .image-layer:hover span {
@@ -331,10 +361,216 @@ section .section-desc {
   transition: all 0.3s;
   font-size: 1rem;
   font-weight: 600;
+  pointer-events: none;
 }
 
 .image-round {
-  width: 8rem;
-  height: 8rem;
+  width: 21rem;
+  height: 18rem;
+  margin-right: 2rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 1rem;
+  position: relative;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+
+.image-round:last-child {
+  margin-right: 0;
+}
+
+.image-round img {
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+}
+
+.image-round .image-header {
+  font-size: 1.125rem;
+  font-weight: 600;
+  margin: 2rem 0 1rem;
+  color: #005c32;
+}
+
+.image-round .image-text {
+  font-size: 0.75rem;
+}
+
+.comment {
+  background: #005c32;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 2rem;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.comment:hover {
+  background-color: #121212;
+}
+
+.comment .stars {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin: 0.5rem 0 0.5rem 0.5rem;
+}
+
+.comment .stars svg {
+  width: 0.875rem;
+  height: 0.875rem;
+  fill: orange;
+}
+
+.comment .user-image {
+  width: 3rem;
+  min-width: 3rem;
+  height: 3rem;
+  min-height: 3rem;
+  margin-right: 1rem;
+}
+
+.comment .user-image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+
+.comment .user-name {
+  font-size: 1.125rem;
+  font-weight: 600;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.comment .comment-text {
+  font-size: 0.875rem;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+.cta {
+  width: 100%;
+  padding: 8rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #fff;
+  background-color: #005c32;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(https://www.kahillogistic.com/images/cover8.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(https://www.kahillogistic.com/images/cover8.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  font-size: 1.75rem;
+}
+
+.cta .cta-text {
+  text-align: center;
+  max-width: 30rem;
+}
+
+.cta button, .cta a {
+  margin-top: 2rem;
+  color: #fff;
+  border: 1px solid #fff;
+  border-radius: 0.5rem;
+  padding: 0.5rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.cta button:hover, .cta a:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+footer {
+  background-color: #fff;
+  color: #000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 8rem 0 4rem;
+}
+
+footer .footer-title {
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+footer .footer-desc {
+  padding: 0 1rem;
+  max-width: 74rem;
+  text-align: left;
+}
+
+footer .linkedin {
+  margin-top: 2rem;
+  background-color: #0A66C2;
+  color: #fff;
+  padding: 0.5rem;
+  border-radius: 0.25rem;
+}
+
+footer .linkedin:hover {
+  border-radius: 50%;
+}
+
+footer .linkedin svg {
+  width: 1rem;
+  height: 1rem;
+  fill: #fff;
 }
 /*# sourceMappingURL=style.css.map */
