--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,7 @@ $transition-time: 0.3s;
 $colors-value: 153;
 $color-primary-dark: hsl($colors-value, 100%, 18%);
 $color-primary-dark-opc: hsla($colors-value, 100%, 18%, 0.75);
-$color-primary-light: hsl($colors-value, 47%, 96%);
+$color-primary-light: hsl($colors-value, 50%, 97%);
 
 // Reset Css
 * {
@@ -54,13 +54,27 @@ img {
 // Nav
 nav {
     background-color: #fff;
-    height: 5rem;
-    padding: 0 5rem;
+    height: 4rem;
+    padding: 0 4rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-    position: relative;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    transition: all $transition-time;
+
+    &.scrolled {
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+
+        a {
+            font-size: 0.875rem;
+        }
+
+        .logo {
+            padding: 0.375rem;
+        }
+    }
 
     .languages {
         display: flex;
@@ -103,7 +117,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 4rem;
+    height: 3.5rem;
 }
 
 // Header
@@ -119,7 +133,7 @@ nav {
     position: relative;
 
     .header-title {
-        font-size: 4rem;
+        font-size: 3rem;
         font-weight: 600;
     }
 
@@ -128,6 +142,7 @@ nav {
         font-weight: 500;
         max-width: 40rem;
         text-align: center;
+        color: #000;
     }
 
     .mx-phone-button {
@@ -142,10 +157,11 @@ nav {
         color: #fff;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 
-        img{
+        img {
             height: 5rem;
             border-radius: 0.5rem 0 0 0.5rem;
             margin-right: 2rem;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
         }
 
         &:hover {
@@ -166,8 +182,11 @@ nav {
 section {
     padding: 4rem;
 
+    &.company{
+        margin-top: 8rem;
+    }
+
     &.services {
-        padding-top: 8rem;
 
         // Row
         .row {
@@ -178,22 +197,27 @@ section {
 
     }
 
-    &.company {
-        .row {
-            margin: 4rem 0;
-        }
-    }
-
     .section-title {
         font-size: 2rem;
         font-weight: 600;
-        margin-bottom: 2rem;
         text-align: center;
     }
 
     .section-desc {
         font-size: 1rem;
         text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    &.testimonials {
+        padding-top: 12rem;
+
+        // Row
+        .row {
+            flex-wrap: nowrap;
+            margin: 2rem auto;
+            max-width: 70rem;
+        }
     }
 }
 
@@ -203,6 +227,7 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+    margin-top: 4rem;
 }
 
 // Card
@@ -235,6 +260,7 @@ section {
     object-fit: cover;
     border-radius: 1rem;
     position: relative;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 
     &:last-child {
         margin-right: 0;
@@ -244,7 +270,6 @@ section {
         width: 100%;
         height: 100%;
         border-radius: 1rem;
-        margin-bottom: 1rem;
     }
 
     .image-layer {
@@ -260,12 +285,14 @@ section {
         border-radius: 1rem;
         background-color: transparent;
         backdrop-filter: initial;
+        opacity: 0;
         transition: all $transition-time;
         cursor: pointer;
 
         &:hover {
             backdrop-filter: blur(0.25rem);
             background-color: $color-primary-dark-opc;
+            opacity: 1;
 
             span {
                 transform: translateY(0);
@@ -277,12 +304,168 @@ section {
             transition: all $transition-time;
             font-size: 1rem;
             font-weight: 600;
+            pointer-events: none;
         }
     }
 }
 
 // Image Round
 .image-round {
-    width: 8rem;
-    height: 8rem;
+    width: 21rem;
+    height: 18rem;
+    margin-right: 2rem;
+    object-fit: cover;
+    border-radius: 1rem;
+    position: relative;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+
+    &:last-child {
+        margin-right: 0;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        border-radius: 1rem;
+    }
+
+    .image-header {
+        font-size: 1.125rem;
+        font-weight: 600;
+        margin: 2rem 0 1rem;
+        color: $color-primary-dark;
+    }
+
+    .image-text {
+        font-size: 0.75rem;
+    }
+}
+
+// Comment
+.comment {
+    background: $color-primary-dark;
+    color: #fff;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    margin-right: 2rem;
+    border-radius: 0.5rem;
+    padding: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    cursor: pointer;
+    user-select: none;
+    transition: all $transition-time;
+
+    &:hover{
+        background-color: #121212;
+    }
+
+    .stars{
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 0.5rem 0 0.5rem 0.5rem;
+        svg{
+            width: 0.875rem;
+            height: 0.875rem;
+            fill: orange;
+        }
+    }
+
+    .user-image {
+        width: 3rem;
+        min-width: 3rem;
+        height: 3rem;
+        min-height: 3rem;
+        margin-right: 1rem;
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 50%;
+        }
+    }
+
+    .user-name{
+        font-size: 1.125rem;
+        font-weight: 600;
+        display: flex;
+        align-items: center;
+    }
+
+    .comment-text{
+        font-size: 0.875rem;
+        color: rgba(255, 255, 255, 0.7);
+    }
+}
+
+// Cta
+.cta{
+    width: 100%;
+    padding: 8rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #fff;
+    background-color: $color-primary-dark;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(https://www.kahillogistic.com/images/cover8.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    font-size: 1.75rem;
+    .cta-text{
+        text-align: center;
+        max-width: 30rem;
+    }
+    button, a{
+        margin-top: 2rem;
+        color: #fff;
+        border: 1px solid #fff;
+        border-radius: 0.5rem;
+        padding: 0.5rem 0.75rem;
+        font-size: 1rem;
+        font-weight: 600;
+        &:hover{
+            background-color: #fff;
+            color: #000;
+        }
+    }
+}
+
+footer{
+    background-color: #fff;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 8rem 0 4rem;
+    .footer-title{
+        font-size: 2rem;
+        font-weight: 600;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+    .footer-desc{
+        padding: 0 1rem;
+        max-width: 74rem;
+        text-align: left;
+    }
+    .linkedin{
+        margin-top: 2rem;
+        background-color: #0A66C2;
+        color: #fff;
+        padding: 0.5rem;
+        border-radius: 0.25rem;
+        &:hover{
+            border-radius: 50%;
+        }
+        svg{
+            width: 1rem;
+            height: 1rem;
+            fill: #fff;
+        }
+    }
 }
