Added 3 languages ​​(English, Turkish, Arabic) to the main pages

--- a/css/style/style.css
+++ b/css/style/style.css
@@ -298,6 +298,7 @@ section.testimonials .row {
   padding: 2rem;
   margin: 1rem;
   border-radius: 1rem;
+  min-height: 18.5rem;
   -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
           box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   -webkit-transition: -webkit-box-shadow 0.3s, -webkit-transform 0.3s;
