--- a/scss/style.scss
+++ b/scss/style.scss
@@ -254,6 +254,7 @@ section {
     padding: 2rem;
     margin: 1rem;
     border-radius: 1rem;
+    min-height: 18.5rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
     transition: box-shadow $transition-time, transform $transition-time;
 
