--- a/css/style/style.css
+++ b/css/style/style.css
@@ -247,6 +247,67 @@ section.company {
   margin-top: 8rem;
 }
 
+section.services.services-page {
+  margin-top: 8rem;
+}
+
+section.about-us {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 12rem 0 8rem;
+  padding: 0 8rem;
+}
+
+section.about-us .about-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+section.about-us .about-col.image {
+  width: 25vw;
+}
+
+section.about-us .about-col.image img {
+  border-radius: 1rem;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+
+section.about-us .section-title {
+  margin-bottom: 2rem;
+  text-align: left;
+}
+
+section.about-us .section-desc {
+  text-align: left;
+  margin: 0 8rem 2rem 0;
+}
+
+section.about-us a,
+section.about-us button {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.5rem;
+  background-color: #005c32;
+  color: #fff;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+}
+
 section.services .row {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
@@ -453,6 +514,10 @@ section.testimonials .row {
 
 .comment:hover {
   background-color: #121212;
+}
+
+.comment:last-child {
+  margin-right: 0;
 }
 
 .comment .stars {
@@ -797,6 +862,24 @@ footer .linkedin svg {
   .cta {
     font-size: 1.5rem;
   }
+  .about-us {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .about-us .section-title {
+    font-size: 1.5rem;
+  }
+  .about-us .section-desc {
+    margin: 0 0 2rem !important;
+  }
+  .about-us .about-col a, .about-us .about-col button {
+    margin-bottom: 4rem;
+  }
+  .about-us .about-col.image {
+    width: 100% !important;
+  }
 }
 
 @media all and (max-width: 768px) {
@@ -820,11 +903,26 @@ footer .linkedin svg {
     font-size: 0.875rem !important;
     max-width: 30rem !important;
   }
+  .testimonials .row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .testimonials .row .comment {
+    width: 80%;
+    margin-right: 0;
+    margin-bottom: 2rem;
+  }
   .cta {
     font-size: 1.25rem;
   }
   .cta .cta-text {
     max-width: 25rem;
+  }
+  .about-us, .services.services-page {
+    padding: 0 4rem !important;
+    margin: 8rem 0 4rem !important;
   }
   footer {
     padding-bottom: 9rem;
@@ -869,17 +967,6 @@ footer .linkedin svg {
   .image-round:last-child {
     margin-bottom: 0;
   }
-  .testimonials .row {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .testimonials .row .comment {
-    width: 80%;
-    margin-right: 0;
-    margin-bottom: 2rem;
-  }
   .mx-phone-button {
     position: fixed !important;
     bottom: 1rem !important;
@@ -911,6 +998,9 @@ footer .linkedin svg {
   }
   .cta .cta-text {
     max-width: 20rem;
+  }
+  .about-us, .services.services-page {
+    margin: 4rem 0 2rem !important;
   }
 }
 
