--- a/scss/style.scss
+++ b/scss/style.scss
@@ -167,7 +167,7 @@ nav {
         color: #fff;
         box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 
-        .icon-and-span-item{
+        .icon-and-span-item {
             display: flex;
             align-items: center;
         }
@@ -199,8 +199,54 @@ nav {
 section {
     padding: 4rem;
 
-    &.company {
+    &.company{
         margin-top: 8rem;
+    }
+
+    &.services.services-page{
+        margin-top: 8rem;
+    }
+
+    &.about-us {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin: 12rem 0 8rem;
+        padding: 0 8rem;
+
+        .about-col {
+            display: flex;
+            flex-direction: column;
+
+            &.image {
+                width: 25vw;
+
+                img {
+                    border-radius: 1rem;
+                    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+                }
+            }
+        }
+
+        .section-title {
+            margin-bottom: 2rem;
+            text-align: left;
+        }
+
+        .section-desc {
+            text-align: left;
+            margin: 0 8rem 2rem 0;
+        }
+
+        a,
+        button {
+            width: fit-content;
+            padding: 0.5rem 0.75rem;
+            border-radius: 0.5rem;
+            background-color: $color-primary-dark;
+            color: #fff;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+        }
     }
 
     &.services {
@@ -379,6 +425,10 @@ section {
         background-color: #121212;
     }
 
+    &:last-child{
+        margin-right: 0;
+    }
+
     .stars {
         display: flex;
         align-items: center;
@@ -516,7 +566,7 @@ footer {
     transform: translateX(20rem);
     transition: all $transition-time;
 
-    &.active{
+    &.active {
         transform: translateX(0);
     }
 
@@ -533,7 +583,8 @@ footer {
         align-items: center;
         justify-content: center;
         color: #005c32;
-        svg{
+
+        svg {
             fill: currentColor;
             width: 1.125rem;
             height: 1.125rem;
@@ -587,12 +638,13 @@ footer {
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(0.5rem);
     z-index: 2;
-    &.active{
+
+    &.active {
         display: block;
     }
 }
 
-.side-button{
+.side-button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -600,7 +652,8 @@ footer {
     display: none;
     padding: 0.5rem;
     border-radius: 0.5rem;
-    svg{
+
+    svg {
         fill: currentColor;
         width: 1.5rem;
         height: 1.5rem;
