--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -195,7 +195,8 @@
         }
     }
     .about-us, .services.services-page{
-        margin: 4rem 0 2rem !important;
+        margin: 4rem 0 0 !important;
+        padding: 1.5rem !important;
     }
 }
 
