--- a/css/style/style.css
+++ b/css/style/style.css
@@ -316,7 +316,7 @@ section.services .row {
 }
 
 section .section-title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 600;
   text-align: center;
 }
@@ -564,6 +564,9 @@ section.testimonials .row {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .comment .comment-text {
@@ -589,8 +592,8 @@ section.testimonials .row {
           flex-direction: column;
   color: #fff;
   background-color: #005c32;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(https://www.kahillogistic.com/images/cover8.jpg);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(https://www.kahillogistic.com/images/cover8.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(/images/cover8.webp);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/cover8.webp);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -1000,7 +1003,8 @@ footer .linkedin svg {
     max-width: 20rem;
   }
   .about-us, .services.services-page {
-    margin: 4rem 0 2rem !important;
+    margin: 4rem 0 0 !important;
+    padding: 1.5rem !important;
   }
 }
 
