--- a/scss/style.scss
+++ b/scss/style.scss
@@ -261,7 +261,7 @@ section {
     }
 
     .section-title {
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 600;
         text-align: center;
     }
@@ -462,6 +462,7 @@ section {
         font-weight: 600;
         display: flex;
         align-items: center;
+        width: max-content;
     }
 
     .comment-text {
@@ -480,7 +481,7 @@ section {
     flex-direction: column;
     color: #fff;
     background-color: $color-primary-dark;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(https://www.kahillogistic.com/images/cover8.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/images/cover8.webp);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
