CSS fixes have been made.

--- a/css/style/style.css
+++ b/css/style/style.css
@@ -243,11 +243,7 @@ section {
   padding: 4rem;
 }
 
-section.company {
-  margin-top: 8rem;
-}
-
-section.services.services-page {
+section.services {
   margin-top: 8rem;
 }
 
