--- a/scss/style.scss
+++ b/scss/style.scss
@@ -199,11 +199,7 @@ nav {
 section {
     padding: 4rem;
 
-    &.company{
-        margin-top: 8rem;
-    }
-
-    &.services.services-page{
+    &.services{
         margin-top: 8rem;
     }
 
